# aoc-2023-ecs-visual

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/apps/2024day4/: CMakeLists.txt
src/apps/2024day4/src/: main.cpp
src/apps/2024day6/: CMakeLists.txt
src/apps/2024day6/src/: main.cpp
src/apps/2024day6/src/entities/: GameObject.h
src/apps/2024day6/src/strategies/: MinimalLoopStrategy.h
src/apps/day14/: CMakeLists.txt
src/apps/day14/src/components/: KeyboardControlledComponent.h  RigidBodyComponent.h
src/apps/day14/src/services/: PuzzleInputParser.h  ThreadPool.h
src/apps/day14/src/strategies/: ECSStrategy.h
src/apps/day14/src/systems/: CollisionSystem.h  KeyboardControlSystem.h  PuzzleSolverSystem.h  RenderGridSystem.h  RenderRigidBodiesSystem.h
src/apps/day3/: CMakeLists.txt
src/apps/day3/src/common/: Vec2.h
src/apps/day3/src/components/: BoxColliderComponent.h  CameraComponent.h  RigidBodyComponent.h  TextComponent.h
src/apps/day3/src/events/: CollisionEvent.h  KeyPressedEvent.h
src/apps/day3/src/services/: PuzzleInputParser.h
src/apps/day3/src/strategies/: ECSStrategy.h
src/apps/day3/src/systems/: CameraSystem.h  CollisionSystem.h  KeyboardControlSystem.h  PuzzleSolverSystem.h  RenderColliderSystem.h  RenderRigidBodiesSystem.h  RenderTextSystem.h
src/apps/pong/: CMakeLists.txt
src/apps/pong-e2e/: CMakeLists.txt
src/apps/pong-e2e/src/: PongE2ETest.cpp  PongE2ETest.h  main.cpp
src/apps/pong-e2e/src/tests/: collision.test.cpp  paddle.test.cpp
src/apps/pong-ecs/: CMakeLists.txt
src/apps/pong-ecs/src/: main.cpp
src/apps/pong-ecs/src/components/: BoxColliderComponent.h  RigidBodyComponent.h
src/apps/pong-ecs/src/services/: PuzzleInputParser.h
src/apps/pong-ecs/src/strategies/: ECSStrategy.h
src/apps/pong-ecs/src/systems/: MovementSystem.h  PuzzleSolverSystem.h  RenderGridSystem.h  RenderTextSystem.h
src/apps/pong/src/: main.cpp
src/apps/pong/src/entities/: GameObject.h  GameObject.test.cpp
src/apps/pong/src/strategies/: MinimalLoopStrategy.h  MinimalLoopStrategy.test.cpp
