add_subdirectory(apps/2024day4)
add_subdirectory(apps/2024day6)
add_subdirectory(apps/day3)
add_subdirectory(apps/day14)

add_subdirectory(packages/core)
add_subdirectory(packages/core-imgui)
add_subdirectory(packages/ecs)
add_subdirectory(packages/events)
add_subdirectory(packages/logger)
add_subdirectory(packages/utility)
